--- a/.configrc.json
+++ b/.configrc.json
@@ -7,7 +7,10 @@
       "colors": "2%3A359",
       "fonts": "796%3A32"
   },
-  "downloadDelay": "50",
+  "downloadDelay": "25",
+
   "outputIconsDir": "./out/icons",
+  "outputIconsKeepFolder": false,
+
   "outputSassFile": "./out/sass/_variables.scss"
 }
