--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colors": "^1.4.0",
     "commander": "^7.2.0",
     "fs": "0.0.1-security",
+    "inquirer": "^8.0.0",
     "node-fetch": "^2.6.1"
   }
 }
