--- a/.configrc.json
+++ b/.configrc.json
@@ -5,12 +5,16 @@
   "node_ids": {
       "icons": "2%3A200",
       "colors": "2%3A359",
-      "fonts": "796%3A32"
+      "fonts": "796%3A32",
+      "typography": "715%3A929"
   },
-  "downloadDelay": "25",
+  "downloadDelay": "10",
 
   "outputIconsDir": "./out/icons",
   "outputIconsKeepFolder": false,
 
-  "outputSassFile": "./out/sass/_variables.scss"
+  "outputSassFile": "./out/sass/_variables.scss",
+
+  "outputHeadingFile": "./out/sass/_heading.scss",
+  "outputTextsFile": "./out/sass/_texts.scss"
 }
