--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cli-progress": "^3.9.0",
     "colors": "^1.4.0",
     "commander": "^7.2.0",
     "fs": "0.0.1-security",
